z-index fix for toast component

--- a/src/components/Toast/styles.module.css
+++ b/src/components/Toast/styles.module.css
@@ -3,6 +3,7 @@
   height: 100vh;
   top: 0px;
   right: 0px;
+  z-index: 99999;
 }
 .toast {
   position: absolute;
